[package]
name = "longan-nano"
version = "0.0.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.0.3"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
smart-leds = "0.3.0"
ws2812-spi = "0.2.0"

[dev-dependencies]
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
st7735-lcd = { version = "0.6.1", path = "./st7735-lcd-rs" }
embedded-graphics = "0.5"
