[package]
name = "longan-nano"
version = "0.1.1"
authors = ["Vadim Kaushan <admin@disasm.info>"]
repository = "https://github.com/riscv-rust/longan-nano"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support package for the Longan Nano board"
keywords = ["riscv", "gd32", "bsp"]
license = "ISC"
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.3.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
st7735-lcd = { version = "0.7", optional = true }

[dev-dependencies]
riscv-rt = "0.7"
panic-halt = "0.2"
embedded-graphics = "0.5"
hub75 = "0.1"
libm = "0.2"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }

[features]
lcd = ["st7735-lcd"]

[[example]]
name = "display"
required-features = ["lcd"]

[[example]]
name = "ferris"
required-features = ["lcd"]

[package.metadata.docs.rs]
features = ['lcd']
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
